Improvements to Commands and tab auto completion and suggestions