@@ -8,6 +8,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -20,17 +21,25 @@ import java.util.stream.Collectors;
 public class TabAutoCompletion implements TabCompleter {
 
     @Override
-    public List<String> onTabComplete(CommandSender commandSender, Command command, String s, String[] strings) {
+    public List<String> onTabComplete(CommandSender commandSender, Command command, String label, String[] strings) {
         if (commandSender instanceof Player player) {
             SerenityPlayer serenityPlayer = SerenityPlayer.getSerenityPlayer(player);
 
             return switch (strings[0]) {
-                case "choose" ->
+                case "choose", "ch" ->
+                    Arrays.stream(Archetype.values()).map(Archetype::toString).collect(Collectors.toList());
+
+                case "bind", "b" ->
+                    AbilityDataManager.getArchetypeAbilities(serenityPlayer.getArchetype()).stream().filter(s -> !AbilityDataManager.isCombo(s)).collect(Collectors.toList());
+                case "display", "d" ->
                         Arrays.stream(Archetype.values()).map(Archetype::toString).collect(Collectors.toList());
-                case "bind" -> AbilityDataManager.getArchetypeAbilities(serenityPlayer.getArchetype());
-                case "display" ->
-                        Arrays.stream(Archetype.values()).map(Archetype::toString).collect(Collectors.toList());
-                default -> null;
+                case "preset", "p" -> switch (strings[1]) {
+                    case "create", "c" -> null;
+                    case "delete", "d", "list", "l", "bind", "b" ->  serenityPlayer.getPresets().keySet().stream().toList();
+
+                    default -> List.of("create, delete, bind");
+                };
+                default -> List.of("choose", "display", "help", "preset");
             };
         }
         return null;
